Bug 1314974 - Make GeckoView on Android work again r=jchen